# perm-montecarlo

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  developer_requirements.txt  setup.py
cmake/: PERMConfig.cmake.in  PERMModuleMacros.cmake
deploy/: deploy_linux.sh  deploy_macos_one_python.sh  perm_version.py  requirements-deploy.txt  setup.py
deploy/docker/: Dockerfile-dockcross-manylinux2014-wheel
deploy/scripts/: download_azure_artifacts.sh  manylinux-build-wheels.sh
docs/: conf.py  index.rst
include/: energy_functions.hpp  lattice_boundary.hpp  lattice_lut.hpp  perm.hpp  perm_common_types.hpp  perm_rng.hpp  single_chain.hpp  vec3D.hpp
scripts/notebooks/: jupyter_to_readme.sh  plot_chain.ipynb  plot_chain.md  plot_chain.py
src/: CMakeLists.txt  energy_functions.cpp  perm.cpp  perm_common_types.cpp
test/: CMakeLists.txt  test_perm.cpp
wrap/: CMakeLists.txt
wrap/perm/: CMakeLists.txt  __init__.py  declare_types_py.hpp  lattice_boundary_py.cpp  lattice_lut_py.cpp  perm_common_py.hpp  perm_common_types_py.cpp  perm_init_py.cpp  perm_py.cpp
wrap/perm/plot/: __init__.py  plot.py
wrap/perm/test_python/: test_perm.py
wrap/perm_montecarlo/: CMakeLists.txt  __init__.py  declare_types_py.hpp  energy_functions_py.cpp  lattice_lut_py.cpp  perm_common_types_py.cpp  perm_init_py.cpp  perm_py.cpp
wrap/perm_montecarlo/plot/: __init__.py
wrap/perm_montecarlo/test_python/: test_perm.py
